--- a/style.css
+++ b/style.css
@@ -66,7 +66,8 @@ h1{
 
 
 #service_block {
-	height: 140vh;
+	height: 90vh;
+	/*background: #000;*/
 }
 
 #service_block h2 {
@@ -112,6 +113,10 @@ h1{
 
 }
 
+#reviews_block{
+	height: 65vh;
+}
+
 .review_item {
 	width:300px ;
 	height:310px ;
@@ -133,4 +138,12 @@ h1{
 	color: white;
 	padding: 20px;
 }
-#car_block
+.car_block_itm{
+	float: left;
+	width: 360px;
+}
+
+.car_block_itm img {
+	display: block;
+	width: 100%;
+}
