--- a/style.css
+++ b/style.css
@@ -5,15 +5,24 @@ body{
 	padding: 0;
 	font-family: 'Oswald', sans-serif;
 	font-weight: 300;
+	background: url(bg2.png);
 }
 
 
 header {
-	background: url(202.png)
-
+	background: url(bg.png);
+/*	background-color: #e5e5f7;
+opacity: 0.8;
+background-image:  linear-gradient(30deg, #000000 12%, transparent 12.5%, transparent 87%, #000000 87.5%, #000000), linear-gradient(150deg, #000000 12%, transparent 12.5%, transparent 87%, #000000 87.5%, #000000), linear-gradient(30deg, #000000 12%, transparent 12.5%, transparent 87%, #000000 87.5%, #000000), linear-gradient(150deg, #000000 12%, transparent 12.5%, transparent 87%, #000000 87.5%, #000000), linear-gradient(60deg, #00000077 25%, transparent 25.5%, transparent 75%, #00000077 75%, #00000077), linear-gradient(60deg, #00000077 25%, transparent 25.5%, transparent 75%, #00000077 75%, #00000077);
+background-size: 20px 35px;
+background-position: 0 0, 0 0, 10px 18px, 10px 18px, 0 0, 10px 18px;
+*/
 }
 
 h1{
+	border-radius: 20px;
+	padding: 15px 20px;
+	background: #000;
 	text-align: center;
 	color: whitesmoke;
 	position: absolute;
@@ -22,6 +31,10 @@ h1{
 	font-size: 100px;
 	text-shadow: 11px 17px 5px rgba(255, 255, 255, .1);
 	/*https://css3gen.com/text-shadow/*/
+	-webkit-box-shadow: 0px 10px 45px 37px rgb(43 106 45 / 70%);
+	-moz-box-shadow: 0px 10px 45px 37px rgb(43 106 45 / 70%);
+	box-shadow: 0px 10px 45px 37px rgb(43 106 45 / 70%);
+
 }
 
 #wrapper {
@@ -67,7 +80,7 @@ h1{
 
 
 #service_block {
-	height: 85vh;
+	height: 95vh;
 	/*background: #000;*/
 }
 
@@ -139,12 +152,37 @@ h1{
 	color: white;
 	padding: 20px;
 }
+
+#car_block {
+	padding: 0;
+}
+
 .car_block_itm{
+	margin: 0 20px 20px 0 ;
 	float: left;
-	width: 360px;
+	width: 386px;
+}
+
+.car_block_itm:nth-child(4), .car_block_itm:nth-child(7)  {
+	margin: 0 0 20px 0;
 }
 
 .car_block_itm img {
 	display: block;
 	width: 100%;
+}
+#order_block{
+	height: 30vh;
+
+}
+
+#order_block a {
+	display: block;
+	text-align: center;
+	text-decoration: none;
+	font-size: 55px;
+	color: #000;
+}
+#order_block p{
+	text-align: center;
 }
